Issue #4572 - First pass at updating for slf4j-api usage
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>